# quadruped_takahashi

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: document.tex  fig_ik_z0.pdf_tex  fig_lfleg_coords.pdf_tex  robot.pdf_tex  wiring.pdf_tex
launch/: launch.py  launch_all.py  launch_robot.py  launch_rviz.py
quadruped_takahashi/: CMakeLists.txt  package.xml
quadruped_takahashi/launch/: launch_robot.py
quadruped_takahashi/rviz/: rviz_config.rviz
quadruped_takahashi/urdf/: quadruped_takahashi.urdf
rviz/: rviz_config.rviz
src/: quadruped_takahashi.cpp  quadruped_takahashi.hpp  quadruped_takahashi_control.cpp  quadruped_takahashi_control.hpp  quadruped_takahashi_odometry.cpp  quadruped_takahashi_odometry.hpp
urdf/: quadruped_takahashi.urdf
